--- a/views/partials/adminheader.hbs
+++ b/views/partials/adminheader.hbs
@@ -100,6 +100,11 @@
                         <h6 class="collapse-header">COUPONS:</h6>
                         <a class="collapse-item" href="/admin/coupon">All Coupons</a>
                         <a class="collapse-item" href="/admin/addcoupon">Add Coupons</a>
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Banners:</h6>
+                        <a class="collapse-item" href="/admin/banner">All Banners</a>
+                        <a class="collapse-item" href="/admin/addbanners">Add Banner</a>
+                        
                     </div>
                 </div>
             </li>
