--- a/views/users/allproducts.hbs
+++ b/views/users/allproducts.hbs
@@ -147,7 +147,7 @@
                         });
                     }
                     else {
-                        if (typeof response === 'number') {
+                        if (typeof response === 'number' ||typeof response == 'object') {
                             console.log(response)
                             var newCount = response;
 
