--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,51 +8,27 @@
         <div class="slider_bg_box">
             <img src="images/slider-bg.jpg" alt="">
         </div>
+        
         <div id="customCarousel1" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="container ">
-                        <div class="row">
-                            <div class="col-sm-6 col-md-6 col-lg-6 ">
-                                <div class="detail-box">
-                                    <h1>
-                                        <span>
-                                            Sale 20% Off
-                                        </span>
-                                        <br>
-                                        On Everything
-                                    </h1>
-                                    <p>
-                                        Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat
-                                        hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias,
-                                        veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                                    </p>
-                                    <div class="btn-box">
-                                        <a href="/users/allproducts1" class="btn1">
-                                            Shop Now
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item ">
+                
+                {{#each banner}}
+                <div class="carousel-item {{#if @first}}active{{/if}}"  data-interval="3000" >
                     <div class="container ">
                         <div class="row">
                             <div class="col-md-7 col-lg-6 ">
                                 <div class="detail-box">
                                     <h1>
                                         <span>
-                                            Sale 35% Off
+                                            {{this.bannerTitle}}
                                         </span>
                                         <br>
-                                        On Everything
+                                        On Everything                                       
+
                                     </h1>
                                     <p>
-                                        Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat
-                                        hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias,
-                                        veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                                        {{this.bannerDescription}}
+                                        
                                     </p>
                                     <div class="btn-box">
                                         <a href="/users/allproducts1" class="btn1">
@@ -64,33 +40,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <div class="container ">
-                        <div class="row">
-                            <div class="col-md-7 col-lg-6 ">
-                                <div class="detail-box">
-                                    <h1>
-                                        <span>
-                                            Sale 50% Off
-                                        </span>
-                                        <br>
-                                        On Everything
-                                    </h1>
-                                    <p>
-                                        Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat
-                                        hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias,
-                                        veniam, vel architecto veritatis delectus repellat modi impedit sequi.
-                                    </p>
-                                    <div class="btn-box">
-                                        <a href="/users/allproducts1" class="btn1">
-                                            Shop Now
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
+               
             </div>
             <div class="container">
                 <ol class="carousel-indicators">
