--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -47,12 +47,7 @@
     }
 </style>
 
-
 <body class="bg-body">
-
-
-
-
     <section class="h-80 h-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -115,7 +110,10 @@
                                             </div>
                                         </div>
                                         {{/each}}
+                                        {{else}}
+                                        {{!-- <p><h3>Empty Cart</h3></p> --}}
                                         {{/if}}
+
 
 
 
