--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -274,9 +274,10 @@
                             }
                             else {
                                 $('#totpriceLink').text('Rs: ' + response.totalPrice);
-                                $('#totlink').text('Rs: ' + (response.totalPrice + 50));
+                                $('.row .totlink').text('Total Rs: ' + (response.totalPrice + 50));
                                 $('#count').text(response.count + ' items');
                                 currentElement.remove();
+                                window.location.reload()
                             }
                         },
                         error: function (error) {
