--- a/views/admin/editbanner.hbs
+++ b/views/admin/editbanner.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -35,63 +35,64 @@
         <div class="container-fluid">
 
 
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Image</th>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each data}}
-                    <tr>
-                        {{!-- <th scope="row">{{this.productname}}</th> --}}
-                        <td>
-                            {{!-- <li> --}}
-                                <img src="{{this.bannerImage}}" style="width: 70px;height:60px;" />
-                            {{!-- </li> --}}
-                        </td>
-                        <td>{{this.bannerTitle}}</td>
-                        <td>{{this.bannerDescription}}</td>
-                        <td>
-                            <div class="dropdown">
-                                <button class="btn btn-outline-secondary dropdown-toggle" type="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    More
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="/admin/edit_banner/{{this._id}}">Edit</a>
-                                    <a class="dropdown-item" href="/admin/products/deletebanner/{{this._id}}"
-                                        onclick="return confirm('Are you want to Delete ?')">
-                                        <i class="bx bx-trash me-1"></i> Delete</a>
+            <div class="content-wrapper">
+                <div class="container-xxl flex-grow-1 container-p-y">
+                    <h4 class="py-3 mb-4"> Edit Banner</h4>
+
+                    <div class="row">
+                        <div class="col-md-12">
+
+                            <div class="card mb-4">
+
+                                <!-- Account -->
+                                <div class="card-body">
+                                    <form action="/admin/addbanners" method="post" enctype="multipart/form-data"
+                                        class="tm-edit-product-form">
+                                        <div class="form-group mb-3">
+                                            <label for="bannerImage">Banner Image</label>
+                                            <input type="file" id="bannerImage" name="bannerImage"
+                                                class="form-control-file" required>
+                                        </div>
+                                        <div class="form-group mb-3">
+                                            <label for="bannerDescription">Banner Title</label>
+                                            <textarea id="bannerDescription" name="title" class="form-control" rows="5"
+                                                placeholder="Enter description for the banner"></textarea>
+                                        </div>
+                                        <div class="form-group mb-3">
+                                            <label for="bannerDescription">Banner Description</label>
+                                            <textarea id="bannerDescription" name="description" class="form-control"
+                                                rows="5" placeholder="Enter description for the banner"></textarea>
+                                        </div>
+                                        <div class="col-6 col-xl-12 col-lg-12">
+                                            <button type="submit" class="btn btn-primary btn-block text-uppercase">Add
+                                                Banner</button>
+                                        </div>
+                                    </form>
                                 </div>
+                                <!-- /Account -->
                             </div>
-                        </td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+                        </div>
+                    </div>
+                </div>
 
 
 
 
-        </div>
-        <!-- /.container-fluid -->
-
-    </div>
-    <!-- End of Main Content -->
-
-    <!-- Footer -->
-    <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Your Website 2020</span>
             </div>
+            <!-- /.container-fluid -->
+
         </div>
-    </footer>
-    <!-- End of Footer -->
+        <!-- End of Main Content -->
+
+        <!-- Footer -->
+        <footer class="sticky-footer bg-white">
+            <div class="container my-auto">
+                <div class="copyright text-center my-auto">
+                    <span>Copyright &copy; Your Website 2020</span>
+                </div>
+            </div>
+        </footer>
+        <!-- End of Footer -->
 
     </div>
     <!-- End of Content Wrapper -->
@@ -144,4 +145,4 @@
 
 </body>
 
-</html>
+</html> --}}
