--- a/views/admin/allbanners.hbs
+++ b/views/admin/allbanners.hbs
@@ -63,7 +63,7 @@
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <a class="dropdown-item" href="/admin/edit_banner/{{this._id}}">Edit</a>
-                                    <a class="dropdown-item" href="/admin/products/deletebanner/{{this._id}}"
+                                    <a class="dropdown-item" href="/admin/delete_banner/{{this._id}}"
                                         onclick="return confirm('Are you want to Delete ?')">
                                         <i class="bx bx-trash me-1"></i> Delete</a>
                                 </div>
