--- a/views/admin/editbanner.hbs
+++ b/views/admin/editbanner.hbs
@@ -1,4 +1,4 @@
-{{!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,13 +12,13 @@
     <title>SB Admin 2 - Charts</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="/admin/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -46,25 +46,28 @@
 
                                 <!-- Account -->
                                 <div class="card-body">
-                                    <form action="/admin/addbanners" method="post" enctype="multipart/form-data"
+                                    <form action="/admin/edit_banner/{{data._id}}" method="post" enctype="multipart/form-data"
                                         class="tm-edit-product-form">
                                         <div class="form-group mb-3">
                                             <label for="bannerImage">Banner Image</label>
-                                            <input type="file" id="bannerImage" name="bannerImage"
+                                            <img src="{{data.bannerImage}}" style="height: 130px; width: 130px;"
+                                            class="form-control-file" >
+                                            <input type="file" id="bannerImage" name="bannerImage" value="{{data.bannerImage}}"
                                                 class="form-control-file" required>
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="bannerDescription">Banner Title</label>
-                                            <textarea id="bannerDescription" name="title" class="form-control" rows="5"
-                                                placeholder="Enter description for the banner"></textarea>
+                                            <input id="bannerTitle" name="title" class="form-control" rows="5"
+                                                value="{{data.bannerTitle}}"></input>
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="bannerDescription">Banner Description</label>
-                                            <textarea id="bannerDescription" name="description" class="form-control"
-                                                rows="5" placeholder="Enter description for the banner"></textarea>
+                                            <input id="bannerDescription" name="description" class="form-control"
+                                                rows="5" placeholder="Enter description for the banner"
+                                                value="{{data.bannerDescription}}"></input>
                                         </div>
                                         <div class="col-6 col-xl-12 col-lg-12">
-                                            <button type="submit" class="btn btn-primary btn-block text-uppercase">Add
+                                            <button type="submit" class="btn btn-primary btn-block text-uppercase">Edit
                                                 Banner</button>
                                         </div>
                                     </form>
@@ -126,23 +129,23 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/admin/vendor/jquery/jquery.min.js"></script>
+    <script src="/admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/admin/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="/admin/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="/admin/vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
-    <script src="js/demo/chart-bar-demo.js"></script>
+    <script src="/admin/js/demo/chart-area-demo.js"></script>
+    <script src="/admin/js/demo/chart-pie-demo.js"></script>
+    <script src="/admin/js/demo/chart-bar-demo.js"></script>
 
 </body>
 
-</html> --}}
+</html>
