--- a/views/admin/editproduct.hbs
+++ b/views/admin/editproduct.hbs
@@ -34,7 +34,7 @@ height: 60px;
     </div>
     <div class="form-group">
       <label for="exampleInputEmail1" required>Description</label>
-      <input type="text" name="description" class="form-control"  value="{{data.decription}}"
+      <input type="text" name="description" class="form-control"  value="{{data.description}}"
         placeholder="Enter description">
     </div>
     <div class="form-group">
