--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-{{!--
-<link rel="stylesheet" type="text/css" href="/users/css/bootstrap.css" /> --}}
+
+<link rel="stylesheet" type="text/css" href="/users/css/bootstrap.css" />
 <link href="/users/css/responsive.css" rel="stylesheet" />
 
 
