--- a/views/users/allproducts.hbs
+++ b/views/users/allproducts.hbs
@@ -77,9 +77,12 @@
                             </a>
                             <a href="/users/addwishlist/{{this._id}}" class="option">
 
-<svg class="wishlist-icon" xmlns="http://www.w3.org/2000/svg" width="34" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-  <path d="M20 6C20 10.42 12 18 12 18S4 10.42 4 6C4 3.48 6.48 1.5 9 1.5C10.69 1.5 12 2.79 12 4.5C12 2.57 14.64 1 18 1C21.31 1 24 3.57 24 6" />
-</svg>
+                                <svg class="wishlist-icon" xmlns="http://www.w3.org/2000/svg" width="34" height="24"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M20 6C20 10.42 12 18 12 18S4 10.42 4 6C4 3.48 6.48 1.5 9 1.5C10.69 1.5 12 2.79 12 4.5C12 2.57 14.64 1 18 1C21.31 1 24 3.57 24 6" />
+                                </svg>
 
                             </a>
                         </div>
@@ -147,11 +150,10 @@
                         });
                     }
                     else {
-                        if (typeof response === 'number' ||typeof response == 'object') {
+                        if (typeof response === 'number' || typeof response == 'object') {
                             console.log(response)
-                            var newCount = response;
-
-                            $('.fa-shopping-cart + .badge').text(newCount);
+                            var newCount = response.count || response;
+                            updateCartBadge(newCount);
                             Swal.fire({
                                 icon: 'success',
                                 title: 'Success!',
@@ -166,6 +168,14 @@
                 }
             });
         });
+        function updateCartBadge(count) {
+            $('#cart-badge').text(count);
+            if (count > 0) {
+                $('#cart-badge').show();
+            } else {
+                $('#cart-badge').hide();
+            }
+        }
     });
 </script>
 
