--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
                                             {{this.bannerTitle}}
                                         </span>
                                         <br>
-                                        On Everything
+                                        {{this.onProducts}}
 
                                     </h1>
                                     <p>
