--- a/views/admin/addbanner.hbs
+++ b/views/admin/addbanner.hbs
@@ -63,6 +63,11 @@
                                             <textarea id="bannerDescription" name="description" class="form-control"
                                                 rows="5" placeholder="Enter description for the banner"></textarea>
                                         </div>
+                                        <div class="form-group mb-3">
+                                            <label for="bannerDescription">Banner On</label>
+                                            <textarea id="onProducts" name="onProducts" class="form-control"
+                                                rows="5" placeholder=""></textarea>
+                                        </div>
                                         <div class="col-6 col-xl-12 col-lg-12">
                                             <button type="submit" class="btn btn-primary btn-block text-uppercase">Add
                                                 Banner</button>
