--- a/views/admin/allbanners.hbs
+++ b/views/admin/allbanners.hbs
@@ -41,20 +41,19 @@
                         <th>Image</th>
                         <th>Title</th>
                         <th>Description</th>
+                        <th>On Products</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each data}}
                     <tr>
-                        {{!-- <th scope="row">{{this.productname}}</th> --}}
                         <td>
-                            {{!-- <li> --}}
                                 <img src="{{this.bannerImage}}" style="width: 70px;height:60px;" />
-                            {{!-- </li> --}}
                         </td>
                         <td>{{this.bannerTitle}}</td>
                         <td>{{this.bannerDescription}}</td>
+                        <td>{{this.onProducts}}</td>
                         <td>
                             <div class="dropdown">
                                 <button class="btn btn-outline-secondary dropdown-toggle" type="button"
