--- a/views/admin/editbanner.hbs
+++ b/views/admin/editbanner.hbs
@@ -66,6 +66,12 @@
                                                 rows="5" placeholder="Enter description for the banner"
                                                 value="{{data.bannerDescription}}"></input>
                                         </div>
+                                         <div class="form-group mb-3">
+                                            <label for="on">Banner On</label>
+                                            <input id="onProducts" name="onProducts" class="form-control"
+                                                rows="5" placeholder=""
+                                                value="{{data.onProducts}}"></input>
+                                        </div>
                                         <div class="col-6 col-xl-12 col-lg-12">
                                             <button type="submit" class="btn btn-primary btn-block text-uppercase">Edit
                                                 Banner</button>
