--- a/views/admin/orderSummary.hbs
+++ b/views/admin/orderSummary.hbs
@@ -31,6 +31,9 @@
 
         <!-- End of Topbar -->
         {{> adminheader}}
+        <div style="margin-left: 38px;">
+            <h2>Grand Total:Rs {{totalAmount}}</h2>
+        </div>
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
