--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,39 +1,29 @@
 <div class="hero_area">
-    <!-- header section strats -->
-
+    <!-- header section starts -->
     <!-- end header section -->
     <!-- slider section -->
     {{> userheader}}
-    <section class="slider_section ">
-        <div class="slider_bg_box">
-            <img src="images/slider-bg.jpg" alt="">
-        </div>
-
+    <section>
         <div id="customCarousel1" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
-
                 {{#each banner}}
                 <div class="carousel-item {{#if @first}}active{{/if}}" data-interval="3000">
-                    <div class="container ">
-                        <div class="row">
-                            <div class="col-md-7 col-lg-6 ">
-                                <div class="detail-box">
-                                    <h1>
-                                        <span>
-                                            {{this.bannerTitle}}
-                                        </span>
-                                        <br>
-                                        {{this.onProducts}}
-
-                                    </h1>
-                                    <p>
-                                        {{this.bannerDescription}}
-
-                                    </p>
-                                    <div class="btn-box">
-                                        <a href="/users/allproducts1" class="btn1">
-                                            Shop Now
-                                        </a>
+                    <div class="slider_section">
+                        <div class="slider_bg_box">
+                            <img src="{{this.bannerImage}}" alt="" style="height: 100%;">
+                        </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7 col-lg-6">
+                                    <div class="detail-box">
+                                        <h1>
+                                            <span>{{this.bannerTitle}}</span><br>
+                                            {{this.onProducts}}
+                                        </h1>
+                                        <p>{{this.bannerDescription}}</p>
+                                        <div class="btn-box">
+                                            <a href="/users/allproducts1" class="btn1">Shop Now</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -41,13 +31,12 @@
                     </div>
                 </div>
                 {{/each}}
-
             </div>
             <div class="container">
                 <ol class="carousel-indicators">
-                    <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
-                    <li data-target="#customCarousel1" data-slide-to="1"></li>
-                    <li data-target="#customCarousel1" data-slide-to="2"></li>
+                    {{#each banner}}
+                    <li data-target="#customCarousel1" data-slide-to="{{@index}}" class="{{#if @first}}active{{/if}}"></li>
+                    {{/each}}
                 </ol>
             </div>
         </div>
