--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -80,7 +80,7 @@
 
 
                                                 <a href="/users/cart/qtyminus/{{this.product._id}} "
-                                                    class="btn btn-minus" data-productid="{{this.product._id}}"> -
+                                                    class="btn btn-minus" data-productid="{{this.product._id}}"><strong>-</strong>
                                                 </a>
 
 
@@ -92,7 +92,7 @@
 
 
                                                 <a href="/users/cart/qtyadd/{{this.product._id}}" class="btn btn-add"
-                                                    data-productid="{{this.product._id}}">+
+                                                    data-productid="{{this.product._id}}"> <strong>+</strong>
 
 
                                                 </a>
